deploy: Leslie-Lu/zhenlu@66ce9c3c43df7b7a571de2a2fedc82a8a288a744

--- a/files/bib/citations.bib
+++ b/files/bib/citations.bib
@@ -804,3 +804,14 @@ Humans},
    year = {2009},
    type = {Generic}
 }
+
+@article{leerink2024biomarker,
+  title={A biomarker-based diagnostic model for cardiac dysfunction in childhood cancer survivors},
+  author={Leerink, Jan M and Feijen, Elizabeth AM and de Baat, Esmee C and Merkx, Remy and van der Pal, Helena JH and Tissing, Wim JE and Louwerens, Marloes and van den Heuvel-Eibrink, Marry M and Versluys, A Birgitta and van Dalen, Elvira C and others},
+  journal={Cardio Oncology},
+  volume={6},
+  number={2},
+  pages={236--247},
+  year={2024},
+  publisher={American College of Cardiology Foundation Washington DC}
+}
