deploy: Leslie-Lu/zhenlu@3648bd68e93c36f6a9f74582a8b9ad7af942f6cd

--- a/files/bib/citations.bib
+++ b/files/bib/citations.bib
@@ -815,3 +815,25 @@ Humans},
   year={2024},
   publisher={American College of Cardiology Foundation Washington DC}
 }
+
+@article{RN1343,
+   author = {Zeng, Lin and Ma, Pengcheng and Li, Zeyang and Liang, Shengxing and Wu, Chengkai and Hong, Chang and Li, Yan and Cui, Hao and Li, Ruining and Wang, Jiaren and He, Jingzhe and Li, Wenyuan and Xiao, Lushan and Liu, Li},
+   title = {Multimodal Machine Learning-Based Marker Enables Early Detection and Prognosis Prediction for Hyperuricemia},
+   journal = {Advanced Science},
+   volume = {11},
+   number = {34},
+   pages = {2404047},
+   abstract = {Abstract Hyperuricemia (HUA) has emerged as the second most prevalent metabolic disorder characterized by prolonged and asymptomatic period, triggering gout and metabolism-related outcomes. Early detection and prognosis prediction for HUA and gout are crucial for pre-emptive interventions. Integrating genetic and clinical data from 421287 UK Biobank and 8900 Nanfang Hospital participants, a stacked multimodal machine learning model is developed and validated to synthesize its probabilities as an in-silico quantitative marker for hyperuricemia (ISHUA). The model demonstrates satisfactory performance in detecting HUA, exhibiting area under the curves (AUCs) of 0.859, 0.836, and 0.779 within the train, internal, and external test sets, respectively. ISHUA is significantly associated with gout and metabolism-related outcomes, effectively classifying individuals into low- and high-risk groups for gout in the train (AUC, 0.815) and internal test (AUC, 0.814) sets. The high-risk group shows increased susceptibility to metabolism-related outcomes, and participants with intermediate or favorable lifestyle profiles have hazard ratios of 0.75 and 0.53 for gout compared with those with unfavorable lifestyles. Similar trends are observed for other metabolism-related outcomes. The multimodal machine learning-based ISHUA marker enables personalized risk stratification for gout and metabolism-related outcomes, and it is unveiled that lifestyle changes can ameliorate these outcomes within high-risk group, providing guidance for preventive interventions.},
+   keywords = {gout
+hyperuricemia
+machine learning
+multimodal
+prognosis
+stratification},
+   ISSN = {2198-3844},
+   DOI = {https://doi.org/10.1002/advs.202404047},
+   url = {https://doi.org/10.1002/advs.202404047},
+   year = {2024},
+   type = {Journal Article}
+}
+
