--- a/files/bib/citations.bib
+++ b/files/bib/citations.bib
@@ -831,7 +831,7 @@ multimodal
 prognosis
 stratification},
    ISSN = {2198-3844},
-   DOI = {https://doi.org/10.1002/advs.202404047},
+   DOI = {10.1002/advs.202404047},
    url = {https://doi.org/10.1002/advs.202404047},
    year = {2024},
    type = {Journal Article}
