--- a/files/bib/citations.bib
+++ b/files/bib/citations.bib
@@ -837,3 +837,11 @@ stratification},
    type = {Journal Article}
 }
 
+@book{RN529,
+   author = {Allison, Paul D},
+   title = {Survival analysis using SAS: a practical guide},
+   publisher = {Sas Institute},
+   ISBN = {1599948842},
+   year = {2010},
+   type = {Book}
+}
