deploy: Leslie-Lu/zhenlu@d86cc1847f23b7e2e8af520868c84ec2bb8dde39

--- a/files/bib/citations.bib
+++ b/files/bib/citations.bib
@@ -845,3 +845,16 @@ stratification},
    year = {2010},
    type = {Book}
 }
+
+@article{RN1159,
+   author = {Omidiran, Oluwaferanmi and Patel, Aashna and Usman, Sarah and Mhatre, Ishani and Abdelhalim, Habiba and Degroat, William and Narayanan, Rishabh and Singh, Kritika and Mendhe, Dinesh and Ahmed, Zeeshan},
+   title = {GWAS advancements to investigate disease associations and biological mechanisms},
+   journal = {Clinical and Translational Discovery},
+   volume = {4},
+   number = {3},
+   ISSN = {2768-0622},
+   DOI = {10.1002/ctd2.296},
+   url = {https://dx.doi.org/10.1002/ctd2.296},
+   year = {2024},
+   type = {Journal Article}
+}
